{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 184,
  "lineage": "d759f2f7-d831-c230-8b99-7f2c5c6e8f75",
  "resources": [
    {
      "module": "module.aws-ec2-free-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws-public-ec2-free-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:207567780191:instance/i-06ac6d3b818a7cdba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ac6d3b818a7cdba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_tf_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d5a0f8064db406dc",
            "private_dns": "ip-10-0-1-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-34-228-157-138.compute-1.amazonaws.com",
            "public_ip": "34.228.157.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-020947d28f571656b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028f165603e5bf4c8",
            "tags": {
              "Name": "dev-public-ec2-free-tier"
            },
            "tags_all": {
              "Name": "dev-public-ec2-free-tier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07fe33d693a47362f"
            ]
          },
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-igw-free-tier",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw-free-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:internet-gateway/igw-04cdb5a6ab990e894",
            "id": "igw-04cdb5a6ab990e894",
            "owner_id": "207567780191",
            "tags": {
              "Name": "dev-igw-free-tier"
            },
            "tags_all": {
              "Name": "dev-igw-free-tier"
            },
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "aws-nacl-free-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:network-acl/acl-0c4a70a387253fe54",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c4a70a387253fe54",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "207567780191",
            "subnet_ids": [],
            "tags": {
              "Name": "dev-nacl-free-tier"
            },
            "tags_all": {
              "Name": "dev-nacl-free-tier"
            },
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "a1-nacl-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08180fb7801f65ce2",
            "network_acl_id": "acl-0c4a70a387253fe54",
            "subnet_id": "subnet-028f165603e5bf4c8"
          },
          "dependencies": [
            "module.aws-nacl-free-tier.aws_network_acl.aws-nacl-free-tier",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "a2-nacl-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d3e2a65599975cea",
            "network_acl_id": "acl-0c4a70a387253fe54",
            "subnet_id": "subnet-0f991d1a9da6f951f"
          },
          "dependencies": [
            "module.aws-nacl-free-tier.aws_network_acl.aws-nacl-free-tier",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1b",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "a3-nacl-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0450feaf67678268a",
            "network_acl_id": "acl-0c4a70a387253fe54",
            "subnet_id": "subnet-026fde435df704ab9"
          },
          "dependencies": [
            "module.aws-nacl-free-tier.aws_network_acl.aws-nacl-free-tier",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-private-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "a4-nacl-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-07c41497fc767258a",
            "network_acl_id": "acl-0c4a70a387253fe54",
            "subnet_id": "subnet-08b63a1633ace4d16"
          },
          "dependencies": [
            "module.aws-nacl-free-tier.aws_network_acl.aws-nacl-free-tier",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-private-us-east-1b",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rtb-private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:route-table/rtb-0f08e38d5ec3d01ca",
            "id": "rtb-0f08e38d5ec3d01ca",
            "owner_id": "207567780191",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-rtb-private-us-east-1a"
            },
            "tags_all": {
              "Name": "dev-rtb-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rtb-private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:route-table/rtb-047bdf58e6337526e",
            "id": "rtb-047bdf58e6337526e",
            "owner_id": "207567780191",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-rtb-private-us-east-1b"
            },
            "tags_all": {
              "Name": "dev-rtb-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:route-table/rtb-0615dc96213ebabd3",
            "id": "rtb-0615dc96213ebabd3",
            "owner_id": "207567780191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04cdb5a6ab990e894",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rtb-public"
            },
            "tags_all": {
              "Name": "dev-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-igw-free-tier.aws_internet_gateway.aws-igw-free-tier",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1-aws-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec5ff2ea7b05c1fc",
            "route_table_id": "rtb-0615dc96213ebabd3",
            "subnet_id": "subnet-028f165603e5bf4c8"
          },
          "dependencies": [
            "module.aws-igw-free-tier.aws_internet_gateway.aws-igw-free-tier",
            "module.aws-rtb-free-tier.aws_route_table.aws-rtb-public",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2-aws-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1cca18dfda33a32",
            "route_table_id": "rtb-0615dc96213ebabd3",
            "subnet_id": "subnet-0f991d1a9da6f951f"
          },
          "dependencies": [
            "module.aws-igw-free-tier.aws_internet_gateway.aws-igw-free-tier",
            "module.aws-rtb-free-tier.aws_route_table.aws-rtb-public",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1b",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws-rtb-private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036cdffec25eb07ef",
            "route_table_id": "rtb-0f08e38d5ec3d01ca",
            "subnet_id": "subnet-026fde435df704ab9"
          },
          "dependencies": [
            "module.aws-rtb-free-tier.aws_route_table.aws-rtb-private-us-east-1a",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-private-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws-rtb-private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f94b16df2541dfd3",
            "route_table_id": "rtb-047bdf58e6337526e",
            "subnet_id": "subnet-08b63a1633ace4d16"
          },
          "dependencies": [
            "module.aws-rtb-free-tier.aws_route_table.aws-rtb-private-us-east-1b",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-private-us-east-1b",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group/sg-07fe33d693a47362f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07fe33d693a47362f",
            "ingress": [],
            "name": "aws-public-sg",
            "name_prefix": "",
            "owner_id": "207567780191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-public-sg-free-tier"
            },
            "tags_all": {
              "Name": "dev-public-sg-free-tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group-rule/sgr-036c7eee21c8bef88",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-036c7eee21c8bef88",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07fe33d693a47362f",
            "security_group_rule_id": "sgr-036c7eee21c8bef88",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_mysql_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group-rule/sgr-02841f0036131863d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-02841f0036131863d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07fe33d693a47362f",
            "security_group_rule_id": "sgr-02841f0036131863d",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group-rule/sgr-06b7ba2db58f821b0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06b7ba2db58f821b0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07fe33d693a47362f",
            "security_group_rule_id": "sgr-06b7ba2db58f821b0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4_3005",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group-rule/sgr-0e8bbe4289edcf0f2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3005,
            "id": "sgr-0e8bbe4289edcf0f2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07fe33d693a47362f",
            "security_group_rule_id": "sgr-0e8bbe4289edcf0f2",
            "tags": null,
            "tags_all": {},
            "to_port": 3005
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4_3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group-rule/sgr-05f575afe07743ab3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-05f575afe07743ab3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07fe33d693a47362f",
            "security_group_rule_id": "sgr-05f575afe07743ab3",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet-free-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:subnet/subnet-026fde435df704ab9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026fde435df704ab9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567780191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-private-us-east-1a"
            },
            "tags_all": {
              "Name": "dev-subnet-private-us-east-1a"
            },
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet-free-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:subnet/subnet-08b63a1633ace4d16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b63a1633ace4d16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567780191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-private-us-east-1b"
            },
            "tags_all": {
              "Name": "dev-subnet-private-us-east-1b"
            },
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet-free-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:subnet/subnet-028f165603e5bf4c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028f165603e5bf4c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567780191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-public-us-east-1a"
            },
            "tags_all": {
              "Name": "dev-subnet-public-us-east-1a"
            },
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet-free-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:subnet/subnet-0f991d1a9da6f951f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f991d1a9da6f951f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567780191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-public-us-east-1b"
            },
            "tags_all": {
              "Name": "dev-subnet-public-us-east-1b"
            },
            "vpc_id": "vpc-011693a104c4a8e82"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-free-tier",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc-free-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:vpc/vpc-011693a104c4a8e82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00aa665eb154b76e6",
            "default_route_table_id": "rtb-0974c672d9be4ff0c",
            "default_security_group_id": "sg-0eea63af84d9e797c",
            "dhcp_options_id": "dopt-0111d916f6c4dc792",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-011693a104c4a8e82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0974c672d9be4ff0c",
            "owner_id": "207567780191",
            "tags": {
              "Name": "dev-vpc-free-tier"
            },
            "tags_all": {
              "Name": "dev-vpc-free-tier"
            }
          }
        }
      ]
    }
  ]
}